Fixed wrong width on blog page.

--- a/style/biblo.css
+++ b/style/biblo.css
@@ -1,11 +1,11 @@
 /* =====================================
   Dynamo biblo style.css
   ------------------------------------
-  library pages 
+  library pages
   ------------------------------------
-  
+
   main library page (http://biblo.local/biblioteker)
-    blogs 
+    blogs
     events at a library
 /*--------------------------------------*/
 .node-teaser .content{width:510px; margin:0 5px 0 0; float:left;}
@@ -20,7 +20,7 @@ body.page-biblioteker .panel-left .view ul li{padding:10px 0 10px 10px;}
 body.page-biblioteker .panel-left .view ul.pager li{padding:0;}
 body.page-biblioteker .node ul{margin:0;}
 
-body.ding-blog .panel-pane .node-teaser .content{width:700px; margin:0; float:left; padding:0; overflow:hidden;}
+body.ding-blog .panel-pane .node-teaser .content{width:530px; margin:0; float:left; padding:0; overflow:hidden;}
 
 body.ding-ting-object .panel-pane .node-teaser .content{width:370px; }
 /* ==========================================================================
@@ -48,7 +48,7 @@ body.ding-ting-object .panel-pane .node-teaser .content{width:370px; }
   .office-hours-week .hours {clear: right; float: right;}
   .node-teaser-library .office-hours-week{width:175px; float:left;}
     .node-teaser-library .office-hours-week .week-info{background:#d1d9d7}
-    .node-teaser-library .office-hours-week .odd, .node-teaser-library .office-hours-week .even{padding:0 5px;} 
+    .node-teaser-library .office-hours-week .odd, .node-teaser-library .office-hours-week .even{padding:0 5px;}
     .node-teaser-library .office-hours-week .day{width:70px; display:block; float:left; }
     .node-teaser-library .office-hours-week .week-info strong{margin:0 5px; font-weight:normal; }
     .node-teaser-library .office-hours-week .week-info{padding:0 0 0 5px; font-size:10px;}
@@ -84,7 +84,7 @@ body.ding-ting-object .panel-pane .node-teaser .content{width:370px; }
 
 
 /*features pane*/
-.ding-box-pane .pane-library_feature_list ul.item-list{padding:8px 0 8px 12px;} 
+.ding-box-pane .pane-library_feature_list ul.item-list{padding:8px 0 8px 12px;}
   .ding-box-pane .pane-library_feature_list ul.item-list li{width:95px; float:left; margin:0 ; padding:0 0 0 15px; background:transparent url(../images/ok.png) no-repeat left 3px; }
 
 /*event*/
@@ -104,7 +104,7 @@ body.ding-ting-object .panel-pane .node-teaser .content{width:370px; }
   .library-info-inner{background:transparent url(../images/sprite-box.png) no-repeat -460px 0; min-height:170px;}
   .library-info .vcard{padding:15px; overflow:hidden;}
   .library-info .links{padding: 0 15px;}
-  .library-info .library-map{width:228px; padding:15px 15px 10px 15px; overflow:hidden; background:transparent url(../images/sprite-box.png) no-repeat -700px bottom;} 
+  .library-info .library-map{width:228px; padding:15px 15px 10px 15px; overflow:hidden; background:transparent url(../images/sprite-box.png) no-repeat -700px bottom;}
   .library-info .library-map-inner{width:194px; height:140px; background:#eee;}
 
 /*opening hours*/
@@ -157,7 +157,7 @@ ul.menu li.leaf { padding:0 0 0 0; list-style: none outside; margin:0 0 0 15px;}
 
 ul.menu li.leaf > a.active, ul.menu li > a.active,
 li.active-trail > a
-{font-weight:bold; color:#9CB333;} 
+{font-weight:bold; color:#9CB333;}
 
 ul.menu li.leaf a{font-weight:normal;}
 ul.menu li.collapsed{padding:0;}
@@ -169,13 +169,13 @@ ul.menu li.expanded{list-style: none inside;}
 ul.menu li.expanded ul.menu {margin:0 0 0 10px;}
 ul.menu li.leaf a{background:none; padding:0;}
 
-ul.menu li ul{} 
+ul.menu li ul{}
   ul.menu li ul li{list-style-type: none;}
 
 ul.menu li.expanded ul.menu li.expanded{margin:0 0 0 0px}
 ul.menu li.expanded ul.menu li.expanded a{display:block}
 
-.panel-left ul.menu li.first{background:none;}    
+.panel-left ul.menu li.first{background:none;}
 /**/
 .view-blog-category-list ul li div{display:inline;}
 .view-blog-category-list ul li div.node-count{font-size:10px;}
@@ -239,12 +239,12 @@ div.comment {width: auto; margin:0 0 10px 0; padding:5px 5px 5px 0;}
   #comment-form .form-textarea{width:650px;}
   #comment-form .form-buttons{text-align:right;}
     #comment-form .form-button{display:inline;}
-    
+
 
 /*panels node*/
 .page-comment .comment,
 .page-comment #comment-form,
-.pane-node_content, 
+.pane-node_content,
 .pane-node_comments,
 .pane-node_comment_form{
   margin:0 20px 20px 0px;
